fix spacing issue form reachUs section

--- a/src/components/ContactUsStayConnected/style.css
+++ b/src/components/ContactUsStayConnected/style.css
@@ -75,7 +75,7 @@
   font-size: 18px;
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
   color: #cc9955;
 }
 
